Add a bunch of tags, sort

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -93,26 +93,27 @@ TagImplications:
   +sweetiebelle: [+canon, +cmc, +major, +pony]
 
   # Significant canon characters
-  +ariablaze: [+canon, +major, +pony, +villain]
   +adagiodazzle: [+canon, +major, +pony, +villain]
   +angel: [+canon, +major]
+  +ariablaze: [+canon, +major, +pony, +villain]
   +babseed: [+canon, +major, +pony]
   +bigmac: [+canon, +major, +pony]
   +braeburn: [+canon, +major, +pony]
-  +princesscadance: [+canon, +major, +pony]
+  +caballeron: [+canon, +major, +pony, +villain]
   +caketwins: [+canon, +major, +pony]
   +capper: [+canon, +major]
   +captaincelaeno: [+canon, +major]
   +cheerilee: [+canon, +major, +pony]
-  +coloratura: [+canon, +major, +pony]
-  +queenchrysalis: [+canon, +major, +pony, +villain]
   +cheesesandwich: [+canon, +major, +pony]
   +cockatrice: [+canon, +major]
+  +cocopommel: [+canon, +major, +pony]
+  +coloratura: [+canon, +major, +pony]
   +crankydoodle: [+canon, +major]
   +daringdo: [+canon, +major, +pony]
   +derpy: [+canon, +major, +pony]
   +diamondtiara: [+canon, +major, +pony]
   +discord: [+canon, +major, +villain]
+  +dragon: [+canon, +major]
   +ember: [+canon, +major]
   +fancypants: [+canon, +major, +pony]
   +flashmagnus: [+canon, +major, +pony]
@@ -122,18 +123,21 @@ TagImplications:
   +flurryheart: [+canon, +major, +pony]
   +gabby: [+canon, +major]
   +gilda: [+canon, +major]
-  +grubber: [+canon, +major]
-  +starlightglimmer: [+canon, +major, +pony]
   +grannysmith: [+canon, +major, +pony]
+  +griffon: [+canon, +major]
+  +grubber: [+canon, +major]
   +gummy: [+canon, +major]
   +harshwhinny: [+canon, +major, +pony]
   +hoitytoity: [+canon, +major, +pony]
   +indigozap: [+canon, +major]
+  +inkyrose: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
   +kingsombra: [+canon, +major, +pony, +villain]
   +lemonzest: [+canon, +major]
   +lightningdust: [+canon, +major, +pony]
+  +limestonepie: [+canon, +major, +pony]
   +magemeadowbrook: [+canon, +major, +pony]
+  +marblepie: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
   +maud: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
@@ -146,14 +150,18 @@ TagImplications:
   +peachbottom: [+canon, +pony]
   +photofinish: [+canon, +major, +pony]
   +pip: [+canon, +major, +pony]
+  +princesscadance: [+canon, +major, +pony]
   +princesscelestia: [+canon, +major, +pony, +princess]
   +princessluna: [+canon, +major, +pony, +nightmaremoon, +princess]
   +princessskystar: [+canon, +major]
   +principalcinch: [+canon, +major, +villain]
+  +queenchrysalis: [+canon, +major, +pony, +villain]
   +queennovo: [+canon, +major]
   +rockhoof: [+canon, +major, +pony]
+  +screwball: [+canon, +major, +pony]
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
+  +skystinger: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
   +somnambula: [+canon, +major, +pony]
   +sonatadusk: [+canon, +major, +pony, +villain]
@@ -161,20 +169,23 @@ TagImplications:
   +soursweet: [+canon, +major]
   +spike: [+canon, +major]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
+  +starlightglimmer: [+canon, +major, +pony]
   +starswirlthebearded: [+canon, +major, +pony]
   +stevenmagnet: [+canon, +major]
   +stormking: [+canon, +major, +villain]
   +stygian: [+canon, +major, +pony]
   +sugarcoat: [+canon, +major]
+  +sunburst: [+canon, +major, +pony]
   +sunnyflare: [+canon, +major]
   +sunsetshimmer: [+canon, +major, +pony] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
   +tempestshadow: [+canon, +major, +pony]
   +tirek: [+canon, +major, +villain]
+  +treehugger: [+canon, +major, +pony]
   +trixie: [+canon, +major, +pony]
   +troubleshoes: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
-  +sunburst: [+canon, +major, +pony]
+  +vaportrail: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
   +windywhistles: [+canon, +major]
   +winona: [+canon, +major]
@@ -206,6 +217,7 @@ TagImplications:
   +octavia: [+canon, +bgpony, +pony]
   +otherpony: [+canon, +bgpony, +pony]
   +roseluck: [+canon, +bgpony, +pony]
+  +royalguard: [+canon, +pony]
   +rubypinch: [+canon, +bgpony, +pony]
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
   +sugarbelle: [+canon, +bgpony, +pony]
@@ -219,6 +231,7 @@ TagImplications:
   +calamity: [+oc, +ocpony, +pony]
   +daylightdarkle: [+oc, +ocpony, +pony]
   +discentia: [+oc, +ocpony, +pony]
+  +echo: [+batpony, +oc, +ocpony, +pony]
   +eris: [+discord, +oc] # +discord so it shows up somewhere
   +firefly: [+oc, +ocpony, +pony]
   +futashy: [+fluttershy, +oc, +ocpony, +pony]
