Fix conflict for /demod

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -275,6 +275,7 @@ Conflicts:
   /assd:          r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
   /assonata:      r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
   /colgatestroll: r/colgateinquisition    # Conflict with r/clopmotes
+  /demod:         r/ponymotes             # Conflict with r/hithrocemotes
   /dtlaugh:       r/berrytrain            # Conflict with r/zponymotes.
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
