Fix some conflicts

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -261,7 +261,10 @@ Sorting:
 - [r/mylittlemusician, r/mylittlelistentothis] # Copies of some emotes
 
 Conflicts:
+  /abdoubt:       r/ariablaze             # Conflict with r/thebelletower
+  /abhappy:       r/bloomjackquisition    # Conflict with r/thebelletower
   /absing:        r/bloomjackquisition    # Conflict with r/ariablaze
+  /abstanding:    r/ariablaze             # Conflict with r/thebelletower
   /abwant:        r/mylittlelivestream    # Conflict with r/applebloom
   /abreally:      r/ariablaze             # Conflict with r/bloomjackquisition
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
