Add /r/pony_irl and /r/kingemotesiii

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -82,6 +82,7 @@ Subreddits:
 - katiemotes
 - kingemotes
 - kingemotesii
+- kingemotesiii
 - lyra
 - lyraquisition
 - marmemotes
@@ -151,6 +152,7 @@ Subreddits:
 - ploungeafterdark
 - ploungemafia
 - ponk
+- pony_irl
 - ponyanarchism
 - ponycountdown
 - ponyloungerts
