Add some new tags

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -122,6 +122,7 @@ TagImplications:
   +flimandflam: [+canon, +major, +pony]
   +flurryheart: [+canon, +major, +pony]
   +gabby: [+canon, +major]
+  +gallus: [+canon, +major]
   +gilda: [+canon, +major]
   +grannysmith: [+canon, +major, +pony]
   +griffon: [+canon, +major]
@@ -133,6 +134,7 @@ TagImplications:
   +inkyrose: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
   +kingsombra: [+canon, +major, +pony, +villain]
+  +kirin: [+canon, +major]
   +lemonzest: [+canon, +major]
   +lightningdust: [+canon, +major, +pony]
   +limestonepie: [+canon, +major, +pony]
@@ -144,6 +146,7 @@ TagImplications:
   +mistmane: [+canon, +major, +pony]
   +moondancer: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villain]
+  +ocellus: [+canon, +major]
   +opalescence: [+canon, +major]
   +owlowiscious: [+canon, +major]
   +partyfavor: [+canon, +pony]
@@ -158,10 +161,13 @@ TagImplications:
   +queenchrysalis: [+canon, +major, +pony, +villain]
   +queennovo: [+canon, +major]
   +rockhoof: [+canon, +major, +pony]
+  +sandbar: [+canon, +major, +pony]
   +screwball: [+canon, +major, +pony]
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
+  +silverstream: [+canon, +major, +pony]
   +skystinger: [+canon, +major, +pony]
+  +smolder: [+canon, +major]
   +snipsandsnails: [+canon, +major, +pony]
   +somnambula: [+canon, +major, +pony]
   +sonatadusk: [+canon, +major, +pony, +villain]
@@ -189,6 +195,7 @@ TagImplications:
   +vinylscratch: [+canon, +major, +pony]
   +windywhistles: [+canon, +major]
   +winona: [+canon, +major]
+  +yona: [+canon, +major]
   +zecora: [+canon, +major, +pony]
   +zephyrbreeze: [+canon, +bgpony, +pony]
 
